--- a/QuantumTechnicianApp/Src/RejectedLeads.fx.yaml
+++ b/QuantumTechnicianApp/Src/RejectedLeads.fx.yaml
@@ -328,7 +328,7 @@ RejectedLeads As screen:
                     LeadStatus=Header&&Email=User().Email),'Created On',SortOrder.Descending),IntxtSearchBoxSLS_1.Text,"shlrf_contractnumber","shlrf_address","shlrf_buildingname","shlrf_zipcode","shlrf_leadtrackingnumber"),If(ComboBox1_1.Selected.Value="Created Date","createdon",ComboBox1_1.Selected.Value="QQ Team Name","shlrf_qqteamname",ComboBox1_1.Selected.Value="Mechanic Name","shlrf_mechanicname",ComboBox1_1.Selected.Value="Contract No.","shlrf_contractnumber",ComboBox1_1.Selected.Value="Lead Tracking No.","shlrf_leadtrackingnumber",ComboBox1_1.Selected.Value="Building Name","shlrf_buildingname",ComboBox1_1.Selected.Value="Address","shlrf_address",ComboBox1_1.Selected.Value="Lead Status","shlrf_leadstatus"),If(Icon1_1.Icon=Icon.ArrowDown,SortOrder.Descending,Icon1_1.Icon=Icon.ArrowUp,SortOrder.Ascending,SortOrder.Descending))
                 Layout: =Layout.Vertical
                 TemplatePadding: =0
-                TemplateSize: =If(btnheaderSLS_1.Text="Quoted Leads" ||btnheaderSLS_1.Text="Sold Leads",380+htmltxtQQTeamMemberSLS_3.Height,220+htmltxtQQTeamMemberSLS_3.Height)
+                TemplateSize: =If(btnheaderSLS_1.Text="Rejected Leads",340+htmltxtQQTeamMemberSLS_3.Height,200+htmltxtQQTeamMemberSLS_3.Height)
                 Width: =If(Parent.Width>1000,Parent.Width,Parent.Width/1.05)
                 X: =20
                 Y: =ctnSearchBarSLS_3.Height+ctnSearchBarSLS_3.Y
@@ -397,16 +397,16 @@ RejectedLeads As screen:
                     ZIndex: =8
 
                 htmltxtZipcodeSLS_1 As htmlViewer:
-                    AutoHeight: =true
                     DisplayMode: =DisplayMode.View
                     Font: =Font.Arial
-                    Height: =20
+                    Height: =0
                     HtmlText: |-
                         ="<b>Zipcode : </b>" & ThisItem.'ZipCode '
                     OnSelect: =Select(Parent)
                     PaddingBottom: =0
                     PaddingTop: =0
                     Size: =If(Parent.Width<378,11,Parent.Width<500,12,14)
+                    Visible: =false
                     Width: =Parent.Width/1.08
                     X: =20
                     Y: =htmltxtAddressSLS_1.Y+htmltxtAddressSLS_1.Height
