--- a/QuantumTechnicianApp/Src/EstimateScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/EstimateScreen.fx.yaml
@@ -1034,6 +1034,8 @@ EstimateScreen As screen:
                             Set(VarCustomerName,false);
                             Set(varCustomerPhonenumber,false);
                             Set(varContactNumber,false);
+                            Set(varContactCurrent, Blank());
+                            Set(varPhoneNumber,Blank())
                         OnUncheck: |-
                             =Set(VarCommunicationSummary,CboxCommunicatedtoCustomer.Value);Set(VarCommunication,false);Reset(IntxtContactName);Reset(IntxtContactNumberES);Set(VarCustomerNameSummary,Blank());
                             Set(VarformattedNumberSummary,Blank());
@@ -1150,16 +1152,16 @@ EstimateScreen As screen:
                     BorderStyle: =BorderStyle.Solid
                     BorderThickness: =0
                     DataField: ="shlrf_customercontact"
-                    Default: =ThisItem.'CustomerContact '
+                    Default: =varPhoneNumber
                     DisplayMode: =Parent.DisplayMode
                     DisplayName: =DataSourceInfo([@LeadInformations],DataSourceInfo.DisplayName,"shlrf_customercontact")
                     Fill: =RGBA(255, 255, 255, 1)
-                    Height: =100
+                    Height: =160
                     MaxLength: =DataSourceInfo([@LeadInformations], DataSourceInfo.MaxLength, "shlrf_customercontact")
                     Required: =false
                     Update: =IntxtContactNumberES.Text
                     Visible: =VarCommunication
-                    Width: =Parent.Width
+                    Width: =719
                     X: =0
                     Y: =9
                     ZIndex: =1
@@ -1192,7 +1194,9 @@ EstimateScreen As screen:
                     IntxtContactNumberES As text:
                         BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
                         BorderThickness: =1
-                        Default: =
+                        ContentLanguage: |-
+                            =//Text(Self.Text, "[$-en-US](###) ###-####")
+                        Default: =Parent.Default
                         DelayOutput: =true
                         DisabledBorderColor: =RGBA(202, 202, 202, 1)
                         DisabledFill: =RGBA(0, 0, 0, 0)
@@ -1202,13 +1206,14 @@ EstimateScreen As screen:
                         HintText: =If(varCustomerPhonenumber,"","Customer Phone Number *")
                         HoverBorderColor: =Self.BorderColor
                         HoverFill: =RGBA(255, 255, 255, 1)
-                        MaxLength: =10
-                        OnChange: |
-                            =If(Len(IntxtContactNumberES.Text)=10, Set(VarformattedNumberSummary, Text(Value(IntxtContactNumberES.Text), "[$-en-US](###) ###-####"));Set(varContactNumber, true);Set(VarPhonenumbererrormessage, false);, If(!IsBlank(IntxtContactNumberES.Text) && Len(IntxtContactNumberES.Text)<>10, Set(VarPhonenumbererrormessage, true); Set(varContactNumber, false)));
+                        MaxLength: =Len(txtPhoneNumberFormatES.Text)
+                        OnChange: |-
+                            =/*If(Len(IntxtContactNumberES.Text)<=10, Set(VarformattedNumberSummary, Text(Value(IntxtContactNumberES.Text), "[$-en-US](###) ###-####"));Set(varContactNumber, true);Set(VarPhonenumbererrormessage, false);, If(!IsBlank(IntxtContactNumberES.Text) && Len(IntxtContactNumberES.Text)<>10, Set(VarPhonenumbererrormessage, true); Set(varContactNumber, false)));
                             Set(varCustomerPhonenumber,true);
+                            */
                         OnSelect: |-
-                            =Set(varCustomerPhonenumber,true);
-                            If(varContactNumber=true,Set(varContactNumber,true));
+                            =/*Set(varCustomerPhonenumber,true);
+                            If(varContactNumber=true,Set(varContactNumber,true));*/
                         PaddingLeft: =5
                         RadiusBottomLeft: =0
                         RadiusBottomRight: =0
@@ -1263,11 +1268,119 @@ EstimateScreen As screen:
                         OnSelect: =Set(varContactNumber,false);
                         Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
                         Text: =VarformattedNumberSummary
-                        Visible: =varContactNumber
+                        Visible: |-
+                            =//varContactNumber
+                            false
                         Width: =IntxtContactNumberES.Width
                         X: =60
                         Y: =IntxtContactNumberES.Y
                         ZIndex: =6
+
+                    Slider1 As slider:
+                        Default: =Len(IntxtContactNumberES.Text)
+                        Height: =33
+                        Max: =10
+                        OnChange: |-
+                            =Set(
+                                varPhoneNumber,
+                                With(
+                                    {
+                                        // extracts all numbers from the phone number field
+                                        varTextNumbersOnly: Concat(
+                                            MatchAll(
+                                                IntxtContactNumberES.Text,
+                                                Match.Digit
+                                            ),
+                                            FullMatch
+                                        ),
+                                        // builds a table with phone number format at every position
+                                        varPhoneNumberFormat: With(
+                                            {varTextPhoneNumberFormat: txtPhoneNumberFormatES.Text},
+                                            With(
+                                                {
+                                                    varTablePhoneNumberFormat: ForAll(
+                                                        Sequence(Len(varTextPhoneNumberFormat)),
+                                                        With(
+                                                            {
+                                                                varNumberCurrentLength: Left(
+                                                                    varTextPhoneNumberFormat,
+                                                                    Value
+                                                                )
+                                                            },
+                                                            {
+                                                                NumberFormat: varNumberCurrentLength,
+                                                                CountNumbers: CountRows(
+                                                                    MatchAll(
+                                                                        varNumberCurrentLength,
+                                                                        "#"
+                                                                    )
+                                                                )
+                                                            }
+                                                        )
+                                                    )
+                                                },
+                                                ForAll(
+                                                    Sequence(
+                                                        Max(
+                                                            varTablePhoneNumberFormat,
+                                                            CountNumbers
+                                                        )
+                                                    ),
+                                                    LookUp(
+                                                        varTablePhoneNumberFormat,
+                                                        CountNumbers = Value
+                                                    )
+                                                )
+                                            )
+                                        )
+                                    },
+                                    Text(
+                                        Value(varTextNumbersOnly),
+                                        LookUp(
+                                            varPhoneNumberFormat,
+                                            CountNumbers = Len(varTextNumbersOnly),
+                                            NumberFormat
+                                        )
+                                    )
+                                )
+                            );
+                            Reset(IntxtContactNumberES);
+                        Width: =315
+                        X: =60
+                        Y: =125
+                        ZIndex: =7
+
+                    txtPhoneNumberFormatES As text:
+                        BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
+                        BorderThickness: =1
+                        ContentLanguage: |-
+                            =//Text(Self.Text, "[$-en-US](###) ###-####")
+                        Default: |-
+                            ="(###)-###-####"
+                        DelayOutput: =true
+                        DisabledBorderColor: =RGBA(202, 202, 202, 1)
+                        DisabledFill: =RGBA(0, 0, 0, 0)
+                        DisplayMode: =Parent.DisplayMode
+                        Font: =Font.Arial
+                        Format: =TextFormat.Number
+                        HintText: =If(varCustomerPhonenumber,"","Customer Phone Number *")
+                        HoverBorderColor: =Self.BorderColor
+                        HoverFill: =RGBA(255, 255, 255, 1)
+                        MaxLength: =10
+                        OnChange: =
+                        OnSelect: =
+                        PaddingLeft: =5
+                        RadiusBottomLeft: =0
+                        RadiusBottomRight: =0
+                        RadiusTopLeft: =0
+                        RadiusTopRight: =0
+                        Reset: =true
+                        Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
+                        Tooltip: ="Customer Phone Number *"
+                        Width: =Parent.Width - 100
+                        X: =100
+                        Y: =85
+                        ZIndex: =8
 
             ctnButtonES As groupContainer.verticalAutoLayoutContainer:
                 AlignInContainer: =AlignInContainer.SetByContainer
