--- a/QuantumTechnicianApp/Src/EstimateScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/EstimateScreen.fx.yaml
@@ -1206,7 +1206,7 @@ EstimateScreen As screen:
                         HintText: =If(varCustomerPhonenumber,"","Customer Phone Number *")
                         HoverBorderColor: =Self.BorderColor
                         HoverFill: =RGBA(255, 255, 255, 1)
-                        MaxLength: =Len(txtPhoneNumberFormatES.Text)
+                        MaxLength: =//Len(txtPhoneNumberFormatES.Text)
                         OnChange: |-
                             =/*If(Len(IntxtContactNumberES.Text)<=10, Set(VarformattedNumberSummary, Text(Value(IntxtContactNumberES.Text), "[$-en-US](###) ###-####"));Set(varContactNumber, true);Set(VarPhonenumbererrormessage, false);, If(!IsBlank(IntxtContactNumberES.Text) && Len(IntxtContactNumberES.Text)<>10, Set(VarPhonenumbererrormessage, true); Set(varContactNumber, false)));
                             Set(varCustomerPhonenumber,true);
@@ -1222,6 +1222,7 @@ EstimateScreen As screen:
                         Reset: =true
                         Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
                         Tooltip: ="Customer Phone Number *"
+                        Visible: =false
                         Width: =Parent.Width - 100
                         X: =60
                         Y: =lblContactES.Y + lblContactES.Height + 5
@@ -1276,11 +1277,30 @@ EstimateScreen As screen:
                         Y: =IntxtContactNumberES.Y
                         ZIndex: =6
 
-                    Slider1 As slider:
-                        Default: =Len(IntxtContactNumberES.Text)
-                        Height: =33
+                    txtphonenumber_1 As text:
+                        BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
+                        Default: =Parent.Default
+                        DelayOutput: =true
+                        DisplayMode: =Parent.DisplayMode
+                        Font: =Font.Arial
+                        MaxLength: |
+                            =Len(txtPhonenumberformat_1.Text)
+                        OnChange: =Set(varCustomerPhonenumber,true);
+                        PaddingLeft: =5
+                        RadiusBottomLeft: =0
+                        RadiusBottomRight: =0
+                        RadiusTopLeft: =0
+                        RadiusTopRight: =0
+                        Tooltip: =Parent.DisplayName
+                        Width: =Parent.Width - 100
+                        X: =60
+                        Y: =lblContactES.Y + lblContactES.Height + 5
+                        ZIndex: =8
+
+                    tog_phonenumberlength_1 As slider:
+                        Default: =Len(txtphonenumber_1.Text)
                         Max: =10
-                        OnChange: |-
+                        OnChange: |
                             =Set(
                                 varPhoneNumber,
                                 With(
@@ -1288,14 +1308,14 @@ EstimateScreen As screen:
                                         // extracts all numbers from the phone number field
                                         varTextNumbersOnly: Concat(
                                             MatchAll(
-                                                IntxtContactNumberES.Text,
+                                                txtphonenumber_1.Text,
                                                 Match.Digit
                                             ),
                                             FullMatch
                                         ),
                                         // builds a table with phone number format at every position
                                         varPhoneNumberFormat: With(
-                                            {varTextPhoneNumberFormat: txtPhoneNumberFormatES.Text},
+                                            {varTextPhoneNumberFormat: txtPhonenumberformat_1.Text},
                                             With(
                                                 {
                                                     varTablePhoneNumberFormat: ForAll(
@@ -1344,43 +1364,21 @@ EstimateScreen As screen:
                                     )
                                 )
                             );
-                            Reset(IntxtContactNumberES);
-                        Width: =315
-                        X: =60
-                        Y: =125
-                        ZIndex: =7
+                            Reset(txtphonenumber_1);
+                        Visible: =false
+                        X: =44
+                        Y: =104
+                        ZIndex: =9
 
-                    txtPhoneNumberFormatES As text:
-                        BorderColor: =If(IsBlank(Parent.Error), Parent.BorderColor, Color.Red)
-                        BorderThickness: =1
-                        ContentLanguage: |-
-                            =//Text(Self.Text, "[$-en-US](###) ###-####")
+                    txtPhonenumberformat_1 As text:
                         Default: |-
                             ="(###)-###-####"
-                        DelayOutput: =true
-                        DisabledBorderColor: =RGBA(202, 202, 202, 1)
-                        DisabledFill: =RGBA(0, 0, 0, 0)
-                        DisplayMode: =Parent.DisplayMode
-                        Font: =Font.Arial
-                        Format: =TextFormat.Number
-                        HintText: =If(varCustomerPhonenumber,"","Customer Phone Number *")
-                        HoverBorderColor: =Self.BorderColor
-                        HoverFill: =RGBA(255, 255, 255, 1)
-                        MaxLength: =10
-                        OnChange: =
-                        OnSelect: =
-                        PaddingLeft: =5
-                        RadiusBottomLeft: =0
-                        RadiusBottomRight: =0
-                        RadiusTopLeft: =0
-                        RadiusTopRight: =0
-                        Reset: =true
-                        Size: =If(Parent.Width<358,12,Parent.Width>358,14,16)
-                        Tooltip: ="Customer Phone Number *"
-                        Width: =Parent.Width - 100
-                        X: =100
-                        Y: =85
-                        ZIndex: =8
+                        Height: =44
+                        Visible: =false
+                        Width: =708
+                        X: =11
+                        Y: =169
+                        ZIndex: =10
 
             ctnButtonES As groupContainer.verticalAutoLayoutContainer:
                 AlignInContainer: =AlignInContainer.SetByContainer
