--- a/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
+++ b/QuantumQQTeamApp/Src/LeadScreen.fx.yaml
@@ -64,6 +64,7 @@ LeadScreen As screen:
             LayoutMinWidth: =250
             LayoutMode: =LayoutMode.Auto
             PaddingLeft: =20
+            Width: =Parent.Width
             ZIndex: =3
 
             lblmechanicnameLdS As label:
@@ -87,6 +88,7 @@ LeadScreen As screen:
             LayoutMinWidth: =250
             LayoutMode: =LayoutMode.Auto
             PaddingLeft: =20
+            Width: =Parent.Width
             ZIndex: =5
 
             lblcontractnumberLdS As label:
@@ -110,6 +112,7 @@ LeadScreen As screen:
             LayoutMinWidth: =250
             LayoutMode: =LayoutMode.Auto
             PaddingLeft: =20
+            Width: =Parent.Width
             ZIndex: =6
 
             lblestimatenumberLdS As label:
