--- a/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/LeadSummaryScreen.fx.yaml
@@ -2234,7 +2234,7 @@ LeadSummaryScreen As screen:
                 FontWeight: =FontWeight.Semibold
                 Height: =100
                 Size: =14
-                Text: =If(VarPhonenumbererrormessage,"Customer phone number should be 10 digits.","All mandatory fields to be filled.")
+                Text: =If(VarPhonenumbererrormessage,"Customer phone number should be 10 digits.","All mandatory fields need to be filled.")
                 Width: =Parent.Width
                 ZIndex: =2
 
