--- a/QuantumTechnicianApp/Src/UnitScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/UnitScreen.fx.yaml
@@ -728,7 +728,7 @@ UnitScreen As screen:
                 FontWeight: =FontWeight.Semibold
                 Height: =100
                 Size: =14
-                Text: ="All mandatory fields to be filled."
+                Text: ="All mandatory fields need to be filled."
                 Width: =Parent.Width
                 ZIndex: =2
 
