--- a/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
+++ b/QuantumTechnicianApp/Src/DashboardScreen.fx.yaml
@@ -238,9 +238,8 @@ DashboardScreen As screen:
                         =//Set(VarStartingYear,Year(First(Filter(LeadInformations,Email=User().Email)).'Created On'));
                     OnUncheck: |-
                         =//for yearly record
-                        If(VarFirstYear<>VarLastYear,
                         Set(yearly,false);
-                        Set(cumulatively,true));
+                        Set(cumulatively,true);
                     ShowLabel: =false
                     Size: =If(Parent.Width>500,18,Parent.Width<500,12,12)
                     TextPosition: =TextPosition.Left
@@ -417,7 +416,7 @@ DashboardScreen As screen:
                         Image: =email
                         Visible: =If(CountRows(Filter(LeadChats,ToEmail=User().Email && 'Read '='Read  (LeadChats)'.No && IsQQApp='IsQQApp (LeadChats)'.Yes && LeadInformationLID.LeadStatus="Submitted"))=0,false,true)
                         Width: =25
-                        X: =Parent.Width/1.2
+                        X: =Parent.Width/1.3
                         Y: =Parent.Height/8
                         ZIndex: =6
 
@@ -551,7 +550,7 @@ DashboardScreen As screen:
                         Image: =email
                         Visible: =If(CountRows(Filter(LeadChats,ToEmail=User().Email && 'Read '='Read  (LeadChats)'.No && IsQQApp='IsQQApp (LeadChats)'.Yes && LeadInformationLID.LeadStatus="InProgress"))=0,false,true)
                         Width: =25
-                        X: =Parent.Width/1.2
+                        X: =Parent.Width/1.3
                         Y: =Parent.Height/8
                         ZIndex: =6
 
@@ -831,7 +830,7 @@ DashboardScreen As screen:
                         Image: =email
                         Visible: =If(CountRows(Filter(LeadChats,ToEmail=User().Email && 'Read '='Read  (LeadChats)'.No && IsQQApp='IsQQApp (LeadChats)'.Yes && LeadInformationLID.LeadStatus="Quoted"))=0,false,true)
                         Width: =25
-                        X: =Parent.Width/1.2
+                        X: =Parent.Width/1.3
                         Y: =Parent.Height/8
                         ZIndex: =6
 
@@ -989,7 +988,7 @@ DashboardScreen As screen:
                         Image: =email
                         Visible: =If(CountRows(Filter(LeadChats,ToEmail=User().Email && 'Read '='Read  (LeadChats)'.No && IsQQApp='IsQQApp (LeadChats)'.Yes && LeadInformationLID.LeadStatus="Sold"))=0,false,true)
                         Width: =25
-                        X: =Parent.Width/1.2
+                        X: =Parent.Width/1.3
                         Y: =Parent.Height/8
                         ZIndex: =6
 
